IDAM to AM Migration for Manage documents